--- a/app/views/layouts/_show_link_to_array.html.haml
+++ b/app/views/layouts/_show_link_to_array.html.haml
@@ -1,5 +1,5 @@
-.col
-%label= label.to_s
+.col.s6.right-align
+  .label= label.to_s
 - objects.each do |o|
-  .col
+  .col.s6
     = link_to o.send(field), o
